# fdtdash

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  LICENSE  README.md  changelog.md  package.json  pyproject.toml  webpack.config.js
app/: __init__.py  app.py
app/static/: index.jsx  package-lock.json  package.json  webpack.config.js
app/static/assets/css/: main.css
app/static/assets/js/: script.js  vendors.min.js
app/templates/: index.html
data/: datafile
jtflask/: __init__.py  config.py  main.py  routes.py
jtflask/jtdash/: __init__.py  app.py  appshell.py  arcgisJS_tools.py  arcgis_JS_tools.py  basemap_gallery.py  brand.py  callbacks.py  charts.py  layout.py  linecharts.py  navbar.py  sidebar.py  sidebar.py.disable  sidebar2.py  statsHoverCards.py  statshovercards.py  utils.py  widgets.py
jtflask/static/: SceneView.html  SpatialAwareness.html  TemporalAwareness.html  bf-ImageServer.html  identify.html  multidimensional.html
jtflask/static/assets/css/: brand.css  charts.css  main.css  navbar.css  sidebar.css  sidebar.css.disable  sidebar2.css  statsHoverCards.css  statshovercards.css  style.css  widgets.css
jtflask/static/assets/data/: Parcels_To_LUGEN_Descripts_2024.csv  data.json  data2.json  data3.json  land_use_categories.json  navbar_button_mappings.json  (+1 more)
jtflask/static/src/: index.css  index.js  utils.js
jtflask/templates/: index.html
modules/building_damage_prediction/: README.md  damage_prediction_example.ipynb  encoder.pkl  trained_rf.pkl
requirements/: common.txt  dev.txt
scripts/: download_lidar.py  get_data_uscb_api.py
(+16 files in other folders)
