[project]
name = "jaxtwin"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Franklin Pinnock", email = "pinnockf@gmail.com" }
]
dependencies = [
    "Brotli==1.0.9",
    "Flask==2.2.2",
    "Flask-Compress==1.13",
    "Flask-Cors==3.0.10",
    "Jinja2==3.1.2",
    "MarkupSafe==2.1.1",
    "Werkzeug==2.2.2",
    "click==8.1.3",
    "dash==2.15.0",
    "dash-bootstrap-components==1.4.1",
    "dash-core-components==2.0.0",
    "dash-extensions==1.0.12",
    "dash-html-components==2.0.0",
    "dash-iconify==0.1.2",
    "dash-mantine-components==0.14.3",
    "dash-table==5.0.0",
    "ipykernel==6.15.3",
    "ipywidgets==8.0.2",
    "itsdangerous==2.1.2",
    "numpy==1.23.3",
    "pandas==1.5.0",
    "plotly==5.10.0",
    "pydeck==0.7.1",
    "python-dateutil==2.8.2",
    "python-dotenv==0.21.0",
    "pytz==2022.2.1",
    "six==1.16.0",
    "tenacity==8.1.0",
    "traitlets==5.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/jaxtwin"]
